[gd_scene load_steps=6 format=3 uid="uid://cmiybl3yy4eh0"]

[ext_resource type="Script" path="res://world/hud.gd" id="1_qpx2s"]
[ext_resource type="Theme" uid="uid://b6d3ukelyderc" path="res://world/theme.tres" id="2_dkdf0"]
[ext_resource type="PackedScene" uid="uid://d17boi01qtpj2" path="res://menu/round_over.tscn" id="3_mas8i"]
[ext_resource type="PackedScene" uid="uid://4063txajmwkw" path="res://menu/pause_menu.tscn" id="4_l02vy"]
[ext_resource type="PackedScene" uid="uid://d0bstd4h3spyx" path="res://menu/main_menu.tscn" id="6_aaehq"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qpx2s")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dkdf0")

[node name="ScoreContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="GameTimer" type="Timer" parent="Control"]
process_mode = 1
one_shot = true

[node name="GameTimeLabel" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoundOver" parent="Control" instance=ExtResource("3_mas8i")]
visible = false
layout_mode = 1

[node name="PauseMenu" parent="Control" instance=ExtResource("4_l02vy")]
visible = false
layout_mode = 1

[node name="MainMenu" parent="Control" instance=ExtResource("6_aaehq")]
visible = false
layout_mode = 1

[connection signal="timeout" from="Control/GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="return_to_game" from="Control/PauseMenu" to="." method="_on_pause_menu_return_to_game"]
[connection signal="return_to_menu" from="Control/PauseMenu" to="." method="_on_pause_menu_return_to_menu"]
[connection signal="game_started" from="Control/MainMenu" to="." method="_on_main_menu_game_started"]
